# nu_plugin

./: .gitignore  ACCEPTANCE.md  AGENTS.md  BACKLOG.md  CHECKLIST_COMPLETION.md  CLAUDE.md  CODEDB_START_HERE.md  Cargo.toml  DOC_GRAPH.md  DRIFT_GUARD.md  FIRST_RUN_PROMPT.md  GOAL.md  HANDOFF.md  NAVIGATION.json  NAVIGATION.md  READINESS_GATE.md  STOP_CONDITIONS.md  SUBGOALS.md  flake.nix  nu_plugin_codedb_execution_package_checklist.md  nu_plugin_codedb_remaining_execution_checklist.md
.github/workflows/: ci.yml
.kb/: AGENTS.md  config.toml
cow_branch_store/: Cargo.toml
cow_branch_store/src/: lib.rs
cow_branch_store/tests/: branches.rs
crates/codedb/: Cargo.toml
crates/codedb/src/: ingest.rs  main.rs  outbox.rs  raw_envelope.rs
crates/codedb/tests/: build_capture_cli.rs  compiler_capture_cli.rs  relative_repo_path.rs  symlink_capture_roundtrip.rs
crates/codedb_build_capture/: Cargo.toml
crates/codedb_cargo/: Cargo.toml
crates/codedb_context/: Cargo.toml
crates/codedb_core/: Cargo.toml  build.rs
crates/codedb_fixtures/: Cargo.toml
crates/codedb_host_import/: Cargo.toml
crates/codedb_host_import/src/: lib.rs
crates/codedb_host_import/tests/: host_import.rs
crates/codedb_mcp/: Cargo.toml
crates/codedb_mcp/src/: lib.rs  main.rs
crates/codedb_mcp/tests/: policy_and_stdio.rs
crates/codedb_rust_static/: Cargo.toml
crates/codedb_ruvector_adapter/: Cargo.toml
crates/codedb_ruvector_adapter/src/: lib.rs
crates/codedb_ruvector_adapter/tests/: adapter.rs
crates/codedb_single_binary_export/: Cargo.toml
crates/codedb_single_binary_export/assets/: checksums.sha256  codedb-pack.zst  license-manifest.json  manifest.json
crates/codedb_single_binary_export/src/: lib.rs  main.rs
crates/codedb_single_binary_export/tests/: materialize.rs  rehearsal.rs  verify.rs
crates/codedb_store_pg/: Cargo.toml
crates/codedb_store_pg/src/: lib.rs
crates/codedb_store_pg/tests/: blobstore_parity.rs  fail_closed.rs  outbox_export.rs  raw_objects_parity.rs
crates/codedb_store_redb/: Cargo.toml
crates/flexnetos_redb_owner/: Cargo.toml
crates/flexnetos_redb_owner/src/: lib.rs  main.rs
crates/flexnetos_redb_owner/tests/: owner.rs
crates/nu_plugin_codedb/: Cargo.toml
crates/nu_plugin_codedb/src/: main.rs
docs/: ARCHITECTURE.md  AUDIT_UPGRADE_COMPLETION.md  BIDIRECTIONAL_ARCHITECTURE.md  BIDIRECTIONAL_ROADMAP.md  CHANGE_PLAN_SCHEMA.md  CODEDB_NUSHELL_SYNTAX_GATE.md  CODEDB_YAZELIX_INIT_CONTRACT.md  CODEDB_YAZELIX_RUNTIME_TOOL.md  CODEX_BRIDGE.md  COMMANDS.md  ENVCTL_EXPORT_CONTRACT.md  FIXTURE_MATRIX.md  GAP_CLOSURE_PLAN.md  INTEGRATION_CONTRACTS.md  META_INTEGRATION.md  MUTATION_POLICY.md  NUSHELL_PLUGIN_COMPAT.md  RELEASE_GATE.md  ROUND_TRIP_PROOF.md  SCHEMA.md  SECURITY_AND_SECRET_POLICY.md  TEST_PLAN.md  UNSAFE_CAPTURE_POLICY.md  YAZELIX_NUSHELL_RUNTIME.md  YAZELIX_PLACEMENT.md  original_package_cross_reference.md
docs/polyglot-import/: README.md  github-issue-delivery-plan.md  language-import-surface.md  open-questions.md  package-manager-and-lockfile-matrix.md  parser-and-indexer-tooling-matrix.md  polyglot-schema-extension.md  proof-and-round-trip-gates.md  research-ledger.md  security-and-execution-policy.md  single-binary-rust-crate-export.md  whole-repo-import-architecture.md
examples/: idd_unify_e2e.nu
examples/codex/: codedb_bounded_smoke_report.json  codedb_mcp_config.json
examples/nushell/: plugin_registry_smoke.nu  transient_plugin_smoke.nu
execution/: BIDIRECTIONAL_TASK_FILE_MAP.csv  BIDIRECTIONAL_TASK_GRAPH.csv  COMMAND_LEDGER.csv  POLYGLOT_GITHUB_ISSUE_DRAFTS.md  POLYGLOT_TASK_FILE_MAP.csv  POLYGLOT_TASK_GRAPH.csv  REQUIREMENT_PROOF_LEDGER.csv  REQUIREMENT_SOURCE_RECEIPTS.json  TASK_FILE_MAP.csv  TASK_GRAPH.csv  TASK_GRAPH.md  WORKLOG.md
external-sources/: Cargo.toml  requirement-proof-sources.json
fixtures/: README.md  fixture_matrix.csv
fixtures/build_script/: Cargo.toml  build.rs
fixtures/clean_repo/: Cargo.toml
manifests/: CHECKLIST_COMPLETION.json  CHECKSUMS.sha256  CSV_DOC_LINK_AUDIT_INPUT.md  CSV_SOURCE_OF_TRUTH_REPAIR.json  EXTRACTION_PROOF.json  INIT_PROVENANCE.json  LINK_CHECK_REPORT.md  PACKAGE_VALIDATION.json  PACK_MANIFEST.json
original v1/: 01-envctl-table-doctrine.md  08-codex-operating-policy.md  NAVIGATION.md
packaging/: codedb_runtime_tool.nix
prd/: nu_plugin_codedb_v1_1_full_prd.md  nu_plugin_codedb_v1_2_polyglot_import_prd.md
production_projection/: Cargo.toml
production_projection/src/: lib.rs
production_projection/tests/: projection.rs
research/: nushell_yazelix_cross_reference_report.md
scripts/: apply_context_integration.py  bench_ingestion_round_trip.nu  generate_requirement_proof_receipt.py  patch_pg_open.py  repair_cdb068_execution_truth.py  repair_mandatory_governance.py  requirement_proof_attestation.py  run_context_integration.py  truth_surface.py  validate_bidirectional_package.py  validate_integration_contracts.py  validate_mandatory_capabilities.py  validate_requirement_proof_ledger.py  validate_task_graph.py
semantic_edit_gate/: Cargo.toml
semantic_edit_gate/src/: lib.rs
semantic_edit_gate/tests/: gate.rs
tests/: test_ci_detached_attestation.py  test_ci_toolchain_ownership.py  test_codex_bounded_bridge.nu  test_deterministic_scan.nu  test_dynamic_store_plugin.nu  test_ingestion_round_trip.nu  test_init_provenance.nu  test_integration_contracts.py  test_locked_context_integration.py  test_mandatory_capability_policy.py  test_mandatory_pg_parity.py  test_materialization_safety.py  test_no_mutation.nu  test_no_real_home_plugin_registration.nu  test_nushell_syntax_gate.nu  test_plugin_registry.nu  test_plugin_secret_guard.nu  test_postgres_open_policy.py  test_raw_envelope_round_trip.nu  test_redb_lifecycle.nu  test_release_validators.py  test_requirement_proof_attestation.py  test_requirement_proof_ledger.py  test_runtime_tool_contract.py  test_security_no_leak.nu  test_task_graph_validator.py  test_transient_plugin.nu  test_truth_surface.py  test_unsafe_capture.nu  test_workspace_manifest.py  test_yazelix_disabled_smoke.nu  test_yazelix_enabled_smoke.nu
(+157 files in other folders)
