[workspace]
members = [
  "crates/codedb",
  "crates/codedb_cargo",
  "crates/codedb_context",
  "crates/codedb_core",
  "crates/codedb_fixtures",
  "crates/codedb_build_capture",
  "crates/codedb_mcp",
  "crates/codedb_rust_static",
  "crates/codedb_store_redb",
  "crates/codedb_store_pg",
  "crates/codedb_ruvector_adapter",
  "crates/nu_plugin_codedb",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.93.1"

[workspace.dependencies]
codedb-context = { path = "crates/codedb_context" }
codedb-core = { path = "crates/codedb_core" }
nu-plugin = "0.113.1"
nu-protocol = "0.113.1"
