[package]
name = "codedb"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "codedb"
path = "src/main.rs"

[dependencies]
codedb-build-capture = { path = "../codedb_build_capture" }
codedb-context.workspace = true
codedb-cargo = { path = "../codedb_cargo" }
codedb-core.workspace = true
codedb-rust-static = { path = "../codedb_rust_static" }
codedb-store-redb = { path = "../codedb_store_redb" }
codedb-store-pg = { path = "../codedb_store_pg" }
base64 = "0.22"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
