[package]
name = "codedb-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "codedb-mcp"
path = "src/main.rs"

[dependencies]
codedb-context.workspace = true
codedb-cargo = { path = "../codedb_cargo" }
codedb-core.workspace = true
codedb-rust-static = { path = "../codedb_rust_static" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
