[package]
name = "codedb-store-pg"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
codedb-core.workspace = true
postgres = "0.19"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
# Differential-parity test (tests/blobstore_parity.rs): the redb backend is the
# reference the PostgreSQL backend must match byte-for-byte. tempfile gives the
# redb side a throwaway store dir. Both are pure-Rust (redb, no C).
codedb-store-redb = { path = "../codedb_store_redb" }
tempfile = "3"
