[package]
name = "flexnetos-redb-owner"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flexnetos-redb-owner"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
redb = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
