[package]
name = "nu_plugin_codedb"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nu_plugin_codedb"
path = "src/main.rs"

[dependencies]
codedb-cargo = { path = "../codedb_cargo" }
codedb-core.workspace = true
codedb-rust-static = { path = "../codedb_rust_static" }
nu-plugin.workspace = true
nu-protocol.workspace = true
serde_json = "1"
sha2 = "0.10"
